src/include/internal/client_ipc.h

typedef struct xmmsc_ipc_St xmmsc_ipc_t;
void xmmsc_ipc_lock_set (xmmsc_ipc_t *ipc, void *lock, void (*lockfunc)(void *), void (*unlockfunc)(void *));
void xmmsc_ipc_disconnect_set (xmmsc_ipc_t *ipc, void (*disconnect_callback) (void *), void *);
gboolean xmmsc_ipc_io_in_callback (xmmsc_ipc_t *ipc);
void xmmsc_ipc_disconnect (xmmsc_ipc_t *ipc);
void xmmsc_ipc_error_set (xmmsc_ipc_t *ipc, gchar *error);
gint xmmsc_ipc_fd_get (xmmsc_ipc_t *ipc);
int xmmsc_ipc_io_out (xmmsc_ipc_t *ipc);
int xmmsc_ipc_io_out_callback (xmmsc_ipc_t *ipc);
int xmmsc_ipc_io_in_callback (xmmsc_ipc_t *ipc);