src/clients/lib/python/xmmsclient.pyx

"""
Python bindings for XMMS2.
"""

cdef extern from "string.h" :
	int strcmp (signed char *s1, signed char *s2)

cdef extern from "internal/xlist-int.h" :
	ctypedef struct x_list_t :
		void *data
		x_list_t *next
		x_list_t *prev

cdef extern from "internal/xhash-int.h" :
	ctypedef struct x_hash_t

	ctypedef object (*XHFunc) (signed char *key, signed char *value, object user_data)

	void x_hash_foreach (x_hash_t *hash_table, XHFunc func, object user_data)

cdef extern from "xmms/object.h":
	int XMMS_OBJECT_CMD_ARG_NONE
	int XMMS_OBJECT_CMD_ARG_UINT32,
	int XMMS_OBJECT_CMD_ARG_INT32,
	int XMMS_OBJECT_CMD_ARG_STRING,
	int XMMS_OBJECT_CMD_ARG_HASHTABLE,
	int XMMS_OBJECT_CMD_ARG_UINTLIST,
	int XMMS_OBJECT_CMD_ARG_INTLIST,
	int XMMS_OBJECT_CMD_ARG_STRINGLIST,
	int XMMS_OBJECT_CMD_ARG_PLCH,
	int XMMS_OBJECT_CMD_ARG_HASHLIST,

# Actually we don't want a GLib Mainloop here. but for the time beeing....
cdef extern from "glib.h" :
	ctypedef struct GMainContext
	ctypedef struct GMainLoop

	void g_main_loop_run (GMainLoop *loop)
	GMainLoop *g_main_loop_new (GMainContext *context, signed int is_running)

cdef extern from "internal/client_ipc.h" :
	ctypedef struct xmmsc_ipc_t

	int xmmsc_ipc_io_in_callback (xmmsc_ipc_t *ipc)
	int xmmsc_ipc_io_out_callback (xmmsc_ipc_t *ipc)
	int xmmsc_ipc_io_out (xmmsc_ipc_t *ipc)
	int xmmsc_ipc_fd_get (xmmsc_ipc_t *ipc)
	void xmmsc_ipc_disconnect (xmmsc_ipc_t *ipc)
	void xmmsc_ipc_error_set (xmmsc_ipc_t *ipc, char *error)

cdef extern from "internal/xmmsclient_int.h" :
	ctypedef struct xmmsc_connection_t :
		xmmsc_ipc_t *ipc
	
cdef extern from "xmms/xmmsclient.h" :

	ctypedef struct xmmsc_result_t
	ctypedef object (*xmmsc_result_notifier_t) (xmmsc_result_t *res, object user_data)

	xmmsc_result_t *xmmsc_result_restart (xmmsc_result_t *res)
	void xmmsc_result_ref (xmmsc_result_t *res)
	void xmmsc_result_unref (xmmsc_result_t *res)
	void xmmsc_result_notifier_set (xmmsc_result_t *res, xmmsc_result_notifier_t func, object user_data)
	void xmmsc_result_wait (xmmsc_result_t *res)
	signed int xmmsc_result_iserror (xmmsc_result_t *res)
	signed char *xmmsc_result_get_error (xmmsc_result_t *res)
	int xmmsc_result_cid (xmmsc_result_t *res)
	int xmmsc_result_get_type (xmmsc_result_t *res)

	signed int xmmsc_result_get_int (xmmsc_result_t *res, int *r)
	signed int xmmsc_result_get_uint (xmmsc_result_t *res, unsigned int *r)
	signed int xmmsc_result_get_string (xmmsc_result_t *res, signed char **r)
	signed int xmmsc_result_get_hashtable (xmmsc_result_t *res, x_hash_t **r)
	signed int xmmsc_result_get_stringlist (xmmsc_result_t *res, x_list_t **r)
	signed int xmmsc_result_get_intlist (xmmsc_result_t *res, x_list_t **r)
	signed int xmmsc_result_get_uintlist (xmmsc_result_t *res, x_list_t **r)
	signed int xmmsc_result_get_hashlist (xmmsc_result_t *res, x_list_t **r)
	signed int xmmsc_result_get_playlist_change (xmmsc_result_t *res, unsigned int *change, unsigned int *id, unsigned int *argument)

	xmmsc_connection_t *xmmsc_init (char *clientname)
	void xmmsc_disconnect_callback_set (xmmsc_connection_t *c, object (*callback) (object), object userdata)
	signed int xmmsc_connect (xmmsc_connection_t *c, signed char *p)
	void xmmsc_unref (xmmsc_connection_t *c)
	xmmsc_result_t *xmmsc_quit (xmmsc_connection_t *conn)

	xmmsc_result_t *xmmsc_playlist_shuffle (xmmsc_connection_t *)
	xmmsc_result_t *xmmsc_playlist_add (xmmsc_connection_t *, char *)
	xmmsc_result_t *xmmsc_playlist_remove (xmmsc_connection_t *, unsigned int)
	xmmsc_result_t *xmmsc_playlist_clear (xmmsc_connection_t *c)
	xmmsc_result_t *xmmsc_playlist_save (xmmsc_connection_t *c, char *filename)
	xmmsc_result_t *xmmsc_playlist_list (xmmsc_connection_t *c)
	xmmsc_result_t *xmmsc_playlist_sort (xmmsc_connection_t *c, char *property) 
	xmmsc_result_t *xmmsc_playlist_set_next (xmmsc_connection_t *c, int pos)
	xmmsc_result_t *xmmsc_playlist_set_next_rel (xmmsc_connection_t *c, signed int)
	xmmsc_result_t *xmmsc_playlist_move (xmmsc_connection_t *c, unsigned int id, signed int movement)
	xmmsc_result_t *xmmsc_playlist_current_pos (xmmsc_connection_t *c)

	xmmsc_result_t *xmmsc_broadcast_playlist_changed (xmmsc_connection_t *c)
	
	xmmsc_result_t *xmmsc_playback_stop (xmmsc_connection_t *c)
	xmmsc_result_t *xmmsc_playback_tickle (xmmsc_connection_t *c)
	xmmsc_result_t *xmmsc_playback_start (xmmsc_connection_t *c)
	xmmsc_result_t *xmmsc_playback_pause (xmmsc_connection_t *c)
	xmmsc_result_t *xmmsc_playback_current_id (xmmsc_connection_t *c)
	xmmsc_result_t *xmmsc_playback_seek_ms (xmmsc_connection_t *c, unsigned int milliseconds)
	xmmsc_result_t *xmmsc_playback_seek_samples (xmmsc_connection_t *c, unsigned int samples)
	xmmsc_result_t *xmmsc_playback_playtime (xmmsc_connection_t *c)
	xmmsc_result_t *xmmsc_playback_status (xmmsc_connection_t *c)

	xmmsc_result_t *xmmsc_broadcast_playback_status (xmmsc_connection_t *c)
	xmmsc_result_t *xmmsc_broadcast_playback_current_id (xmmsc_connection_t *c)

	xmmsc_result_t *xmmsc_signal_playback_playtime (xmmsc_connection_t *c)


	xmmsc_result_t *xmmsc_configval_set (xmmsc_connection_t *c, char *key, char *val)
	xmmsc_result_t *xmmsc_configval_list (xmmsc_connection_t *c)
	xmmsc_result_t *xmmsc_configval_get (xmmsc_connection_t *c, char *key)

	xmmsc_result_t *xmmsc_broadcast_configval_changed (xmmsc_connection_t *c)

	xmmsc_result_t *xmmsc_medialib_select (xmmsc_connection_t *conn, char *query)
	xmmsc_result_t *xmmsc_medialib_playlist_save_current (xmmsc_connection_t *conn, char *name)
	xmmsc_result_t *xmmsc_medialib_playlist_load (xmmsc_connection_t *conn, char *name)
	xmmsc_result_t *xmmsc_medialib_add_entry (xmmsc_connection_t *conn, char *url)
	xmmsc_result_t *xmmsc_medialib_get_info (xmmsc_connection_t *, unsigned int id)
	xmmsc_result_t *xmmsc_medialib_add_to_playlist (xmmsc_connection_t *c, char *query)

	xmmsc_result_t *xmmsc_broadcast_medialib_entry_changed (xmmsc_connection_t *c)
	
	xmmsc_result_t *xmmsc_signal_visualisation_data (xmmsc_connection_t *c)

	char *xmmsc_encode_path (char *path)
	char *xmmsc_decode_path (char *path)

cdef extern from "xmms/xmmsclient-glib.h" :
	void xmmsc_ipc_setup_with_gmain (xmmsc_connection_t *connection)

#####################################################################

from select import select
from os import write
import os

cdef foreach_hash (signed char *key, signed char *value, udata) :
	udata[key] = value

ObjectRef = {}

cdef ResultNotifier (xmmsc_result_t *res, obj) :
	obj.callback ()
	if not obj.get_broadcast () :
		xmmsc_result_unref(res)
		del ObjectRef[obj.get_cid ()]
		
	
cdef class XMMSResult :
	"""
	Class containing the results of some operation
	"""
	cdef xmmsc_result_t *res
	cdef object notifier
	cdef object user_data
	cdef int cid
	cdef int broadcast

	def __new__ (self) :
		self.cid = 0

	def more_init (self, broadcast = 0) :
		self.cid = xmmsc_result_cid (self.res)
		self.broadcast = broadcast
		xmmsc_result_notifier_set (self.res, ResultNotifier, self)
		ObjectRef[self.cid] = self

	def value(self):
		self._check()
	
		type = xmmsc_result_get_type(self.res)

		if type == XMMS_OBJECT_CMD_ARG_UINT32:
			return self.get_uint()
		elif type == XMMS_OBJECT_CMD_ARG_INT32:
			return self.get_int()
		elif type == XMMS_OBJECT_CMD_ARG_STRING:
			return self.get_string()
		elif type == XMMS_OBJECT_CMD_ARG_UINTLIST:
			return self.get_uintlist()
		elif type == XMMS_OBJECT_CMD_ARG_INTLIST:
			return self.get_intlist()
		elif type == XMMS_OBJECT_CMD_ARG_STRINGLIST:
			return self.get_stringlist()
		elif type == XMMS_OBJECT_CMD_ARG_HASHTABLE:
			return self.get_hashtable()
		elif type == XMMS_OBJECT_CMD_ARG_HASHLIST:
			return self.get_hashlist()
		elif type == XMMS_OBJECT_CMD_ARG_PLCH:
			return self.get_playlistchange()

	def get_broadcast (self) :
		return self.broadcast

	def get_cid (self) :
		return self.cid

	def callback (self) :
		""" Override me! """
		pass

	def _check (self) :
		if not self.res :
			raise ValueError ("The resultset did not contain a reply!")

	def wait (self) :
		"""
		Wait for the result from the daemon.
		"""
		self._check ()
		xmmsc_result_wait (self.res)

	def get_int (self) :
		"""
		Get data from the result structure as an int.
		@rtype: int
		"""
		cdef signed int ret
		self._check ()
		if xmmsc_result_get_int (self.res, &ret) :
			return ret
		else :
			raise ValueError ("Failed to retrieve value!")

	def get_uint (self) :
		"""
		Get data from the result structure as an unsigned int.
		@rtype: uint
		"""
		cdef unsigned int ret
		self._check ()
		if xmmsc_result_get_uint (self.res, &ret) :
			return ret
		else :
			raise ValueError ("Failed to retrieve value!")

	def get_string (self) :
		"""
		Get data from the result structure as a string.
		@rtype: string
		"""
		cdef signed char *ret

		self._check ()
		if xmmsc_result_get_string (self.res, &ret) :
			return ret
		else :
			raise ValueError ("Failed to retrieve value!")


	def get_hashtable (self) :
		"""
		@return: A hash table containing media info.
		"""
		cdef x_hash_t *hash
		self._check ()

		if xmmsc_result_get_hashtable (self.res, &hash) :
			ret = {}
			x_hash_foreach (hash, foreach_hash, ret)
			return ret
		else :
			raise ValueError ("Failed to retrieve value!")
			
	def get_intlist (self) :
		"""
		@return: A list of ints from the result structure.
		"""
		cdef x_list_t *l
		cdef x_list_t *n

		self._check ()
		if xmmsc_result_get_intlist (self.res, &l) :
			ret = []
			n = l
			while n :
				ret.append (<signed int>n.data)
				n = n.next

			return ret
		else :
			raise ValueError ("Failed to retrieve value!")

	def get_uintlist (self) :
		"""
		@return: A list of unsigned ints from the result structure.
		"""
		cdef x_list_t *l
		cdef x_list_t *n

		self._check ()
		if xmmsc_result_get_uintlist (self.res, &l) :
			ret = []
			n = l
			while n :
				ret.append (<unsigned int>n.data)
				n = n.next

			return ret
		else :
			raise ValueError ("Failed to retrieve value!")

	def get_hashlist (self) :
		"""
		@return: A list of dicts from the result structure.
		"""
		cdef x_list_t *l
		cdef x_list_t *n

		self._check ()
		if xmmsc_result_get_hashlist (self.res, &l) :
			ret = []
			n = l
			while n :
				hash = {}
				x_hash_foreach (<x_hash_t *>n.data, foreach_hash, hash)
				ret.append (hash)
				n = n.next
			return ret
		else :
			raise ValueError ("Failed to retrieve value!")


	def get_stringlist (self) :
		"""
		@return: A list of strings from the result structure.
		"""
		cdef x_list_t *l
		cdef x_list_t *n

		self._check ()
		if xmmsc_result_get_stringlist (self.res, &l) :
			ret = []
			n = l
			while n :
				ret.append (<signed char *>n.data)
				n = n.next

			return ret
		else :
			raise ValueError ("Failed to retrieve value!")

	def get_playlistchange (self) :
		"""
		@return: a tuple with (changeid, id, argument)
		"""
		cdef unsigned int change
		cdef unsigned int id
		cdef unsigned int arg

		self._check ()
		if xmmsc_result_get_playlist_change (self.res, &change, &id, &arg) :
			return (change, id, arg)
		else :
			raise ValueError ("Failed to retrieve value!")


	def restart (self) :
		cdef XMMSResult r
		r = self

		xmmsc_result_unref (r.res)
		r.res = xmmsc_result_restart (self.res)
		self.more_init ()
		# unref once more, due to ref in
		# more_init->xmmsc_result_notifier_set
		xmmsc_result_unref (r.res)

		return r

	def iserror (self) :
		"""
		@return: Whether the result represents an error or not.
		@rtype: Boolean
		"""
		return xmmsc_result_iserror (self.res)

	def get_error (self) :
		"""
		@return: Error string from the result.
		@rtype: String
		"""
		return xmmsc_result_get_error (self.res)

	def __dealloc__ (self) :
		"""
		Deallocate the result.
		"""

		if self.res :
			xmmsc_result_unref (self.res)

cdef python_disconnect_fun (obj) :
	obj._disconnect_cb ()
